--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,9 +54,9 @@
                             </ul>
                         </li>
                         <li><a href="#">For Enterprise</a></li>
-                        <li><a href="#">Projects</a></li>
+                        <li><a href="{{ site.baseurl }}/project">Projects</a></li>
                         <li><a href="#">Forums</a></li>
-                        <li><a href="#">Blog</a></li>
+                        <li><a href="{{ site.baseurl }}/blog">Blog</a></li>
                         <li><a href="#">RAML MVPs</a></li>
                         <li><a href="#">About</a></li>
                     </ul>
